package somePackage;
syntax = "proto3";

message SomeMessage {
    string test_field = 1; // becomes testField
}